left with a few stuff

--- a/src/app/components/auth-page.component.html
+++ b/src/app/components/auth-page.component.html
@@ -12,4 +12,5 @@
 </form>
 
 <button mat-raised-button [routerLink]="['/countries']">Back</button>
-<button mat-raised-button [disabled]="apiKeyForm.invalid">Delete</button>
+
+<button mat-raised-button [disabled]="apiKeyForm.invalid" (click)="onDelete()">Delete</button>
